--- a/app/src/main/res/layout/fragment_login_.xml
+++ b/app/src/main/res/layout/fragment_login_.xml
@@ -51,6 +51,14 @@
             android:hint="Password"
             android:inputType="textPassword" />
 
+<!--            <EditText-->
+<!--                android:id="@+id/gender"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:hint="User Type"-->
+<!--                android:inputType="text" />-->
+
+
 
 
 
